# twat-fs

./: .gitignore  .pre-commit-config.yaml  02-check.sh  03-up.sh  CHANGELOG.md  CLEANUP.txt  GEMINI.md  IDEAS.md  IMPLEMENTATION_SUMMARY.md  LOG.md  MANIFEST.in  MANUAL_WORKFLOW_SETUP.md  PLAN.md  README.md  REFACTOR_FILELIST.txt  REPO_CONTENT.txt  TODO.md  TODO_FILEBIN_PIXELDRAIN.txt  WORK.md  build.sh  cleanup.py  filetree.sh  fix_type_errors.py  install.ps1  install.sh  mkdocs.yml  mypy.ini  publish.sh  pyproject.toml  requirements-docs.txt  tree.txt  twat_search.txt  update_providers.py
.cursor/rules/: cleanup.mdc  filetree.mdc
.github/workflows/: ci.yml  push.yml  release.yml
.omc/: project-memory.json
.omc/sessions/: 6fa0bc6b-30bc-4fc3-9abf-99891d3e5048.json  aa7cb8b4-c154-49aa-837d-a33cc3431ccb.json  cb8b50e6-6492-4dda-a5d6-e9250b806437.json
.omc/state/: subagent-tracking.json  ultrawork-state.json
.specstory/history/: 2025-03-04_03-45-refining-todo-list-from-codebase-review.md  2025-03-04_04-43-incorporating-ideas-from-ideas-md-into-todo-md.md  2025-03-04_05-33-implementing-todo-phases-1,-2,-and-3.md  2025-03-04_05-33-untitled.md  2025-03-04_06-19-implementation-of-todo-md-phases.md  2025-03-04_07-52-untitled.md  2025-03-04_07-59-project-maintenance-and-documentation-update.md  2025-03-04_08-39-project-documentation-and-cleanup-tasks.md
examples/: upload_example.py
issues/: 202.md
scripts/: build.py  build_binary.py  dev.py  lint.py  release.py  test.py
src/twat_fs/: __init__.py  __main__.py  cli.py  exceptions.py  paths.py  upload.py  upload_providers.txt
src/twat_fs/data/: fileshare.toml
src/twat_fs/upload_providers/: 0x0.py  __init__.py  async_utils.py  bashupload.py  catbox.py  core.py  dropbox.py  factory.py  fal.py  filebin.py  litterbox.py  pixeldrain.py  protocols.py  provider_types.py  registry.py  s3.py  senditsh.py  simple.py  termbin.py  tmpfilelink.py  tmpfilesorg.py  types.py  uguu.py  utils.py  www0x0.py  x0at.py
src_docs/: index.md
src_docs/about/: changelog.md  license.md
src_docs/development/: api-reference.md  architecture.md  contributing.md  provider-development.md  testing.md
src_docs/getting-started/: configuration.md  installation.md  quickstart.md
src_docs/user-guide/: basic-usage.md  cli-reference.md  providers.md  troubleshooting.md
templates/: authenticated_provider_template.py  simple_provider_template.py
tests/: __init__.py  test_async_utils.py  test_filebin_pixeldrain.py  test_integration.py  test_package.py  test_providers_online.py  test_s3_advanced.py  test_twat_fs.py  test_upload.py  test_utils.py
tests/data/: test.txt
tests/tools/: pastebin_tester.py
